[package]
name = "sage"
description = "Lightweight library that enables seamless tool execution with OpenAI APIs"
version = "0.1.0"
readme = "README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
sage_derive = { path = "../sage_derive" }
