[package]
name = "sage_derive"
description = "Macros for sage"
version = "0.1.0"
readme = "README.md"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.75", features = ["full", "fold"] }
